--- a/public/account.html
+++ b/public/account.html
@@ -4,16 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Account - Busqueda de Casa</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <script src="../assets/js/script.js" defer></script>
+    <meta name="title" content="Busqueda de Casa">
+    <meta name="description" content="This is a website for your new home search">
+    <meta name="keywords" content="home search, buy, rent, sell, property">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
+
+    <!-- Google Font Link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <!-- Google Icon Link -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0" />
+
+    <!-- Custom CSS Link -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Custom JS Link -->
+    <script src="assets/js/script.js" defer></script> 
+    <script src="assets/js/properties.js" defer></script>
+    <script src="assets/js/search-results.js" defer></script>
+    <script src="assets/js/sell.js" defer></script>
+    <script src="assets/js/account.js" defer></script>
+
+    <style>
+        main {
+            padding-top: 100px; /* Ensure space between header and content */
+        }
+        .favorites-section {
+            margin-top: 50px; /* Add margin to space out from the header */
+        }
+        .headline-large {
+            font-size: 2rem; /* Adjust font size to fit the page better */
+        }
+    </style>
 </head>
 <body>
 
     <header class="header" data-header>
         <div class="container">
-            <a href="index.html" class="logo">
-                <img src="../assets/img/logo.png" width="135" height="28" alt="Busqueda de Casa Logo">
+            <a href="#" class="logo">
+                <img src="assets/img/logo.png" width="135" height="28" alt="Busqueda de Casa Logo">
             </a>
+
             <nav class="navbar" data-navbar>
                 <ul class="navbar-list">
                     <li><a href="index.html" class="navbar-link label-medium">Home</a></li>
@@ -37,5 +72,58 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer-top">
+            <div class="container">
+                <div class="footer-brand">
+                    <a href="#" class="logo">
+                        <img src="assets/img/logo.png" width="190"  height="28" alt="busqueda de casa">
+                    </a>
+                    <p class="body-medium footer-text">
+                        Lorem ipsum dolor sit amet consectectur. Non bibendum sit non congue pharetra pulvinar leo. 
+                        sed ut amet ipsum. 
+                    </p>
+                </div>
+                <nav class="footer-new" aria-labelledby="nav-label-1">
+                    <p class="title-small footer-list-title" id="nav-label-1">Quick link</p>
+                    <ul class="footer-list">
+                        <li><a href="#" class="body-medium footer-link">Home</a></li>
+                        <li><a href="#" class="body-medium footer-link">Buy</a></li>
+                        <li><a href="#" class="body-medium footer-link">Sell</a></li>
+                        <li><a href="#" class="body-medium footer-link">Rent</a></li>
+                    </ul>
+                </nav>
+                <nav class="footer-new" aria-labelledby="nav-label-2">
+                    <p class="title-small footer-list-title" id="nav-label-2">Support</p>
+                    <ul class="footer-list">
+                        <li><a href="#" class="body-medium footer-link">About Us</a></li>
+                        <li><a href="#" class="body-medium footer-link">Contact Us</a></li>
+                        <li><a href="#" class="body-medium footer-link">Privacy Policy</a></li>
+                        <li><a href="#" class="body-medium footer-link">Terms & Conditions</a></li>
+                    </ul>
+                </nav>
+                <nav class="footer-new" aria-labelledby="nav-label-3">
+                    <p class="title-small footer-list-title" id="nav-label-3">Get in touch</p>
+                    <ul class="footer-list">
+                        <li><a href="#" class="body-medium footer-link">helloyou@busquedadecasa.com</a></li>
+                        <li><address class="address body-medium">4114 Ivey Park Cir, Atlanta GA 30071</address></li>
+                        <li>
+                            <ul class="social-list">
+                                <li><a href="#" class="social-link"><img src="assets/img/facebook.svg" alt="facebook"></a></li>
+                                <li><a href="#" class="social-link"><img src="assets/img/twitter.svg" alt="twitter"></a></li>
+                                <li><a href="#" class="social-link"><img src="assets/img/insta.svg" alt="instagram"></a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <p class="copyright body-medium">Copyright 2024 RealEstate</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
