--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0" />
 
     <!-- Custom CSS Link -->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- Custom JS Link -->
-    <script src="../assets/js/script.js" defer></script>
-    <script src="../assets/js/properties.js" defer></script>
-    <script src="../assets/js/search-results.js" defer></script>
-    <script src="../assets/js/sell.js" defer></script>
+    <script src="assets/js/script.js" defer></script>
+    <script src="assets/js/properties.js" defer></script>
+    <script src="assets/js/search-results.js" defer></script>
+    <script src="assets/js/sell.js" defer></script>
+    <script src="assets/js/account.js" defer></script>
 
 </head>
 <body>
@@ -37,7 +38,7 @@
     <header class="header active" data-header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="../assets/img/logo.png" width="135" height="28" alt="Busqueda de Casa Logo">
+                <img src="assets/img/logo.png" width="135" height="28" alt="Busqueda de Casa Logo">
             </a>
 
             <nav class="navbar" data-navbar>
@@ -51,6 +52,7 @@
 
                 <div id="account-link-container">
                     <button id="loginButton" class="btn btn-fill label-medium">Login</button>
+                    
                     <a href="signup.html" class="btn btn-link label-medium">Sign Up</a>
                 </div>
                 
