--- a/public/login.html
+++ b/public/login.html
@@ -10,17 +10,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0" />
     <link rel="stylesheet" href="../assets/css/style.css">
-    <script src="../assets/js/script.js" defer></script>
-    <script src="../assets/js/properties.js" defer></script> 
-    <script src="../assets/js/search-results.js" defer></script> 
-
+    
+    <!-- Include your external script file -->
+    <script src="assets/js/login.js" defer></script>
+    <script src="assets/js/account.js"></script>
 </head>
 <body>
 
 <header class="header active" data-header>
     <div class="container">
         <a href="index.html" class="logo">
-            <img src="../assets/img/logo.png" width="135" height="28" alt="Busqueda de Casa Logo">
+            <img src="assets/img/logo.png" width="135" height="28" alt="Busqueda de Casa Logo">
         </a>
         <nav class="navbar" data-navbar>
             <ul class="navbar-list">
@@ -57,125 +57,63 @@
 </main>
 
 <footer class="footer">
-
     <div class="footer-top">
         <div class="container">
-
             <div class="footer-brand">
                 <a href="#" class="logo">
-                    <img src="../assets/img/logo.png" width="190"  height="28" alt="busqueda de casa">
+                    <img src="assets/img/logo.png" width="190" height="28" alt="busqueda de casa">
                 </a>
 
                 <p class="body-medium footer-text">
-                    Lorem ipsum dolor sit amet consectectur. Non bibendum sit non congue pharetra pulvinar leo. 
-                    sed ut amet ipsum. 
+                    Lorem ipsum dolor sit amet consectectur. Non bibendum sit non congue pharetra pulvinar leo. sed ut amet ipsum. 
                 </p>
-
             </div>
 
             <nav class="footer-new" aria-labelledby="nav-label-1">
                 <p class="title-small footer-list-title" id="nav-label-1">Quick link</p>
-
                 <ul class="footer-list">
-
-                    <li>
-                        <a href="#" class="body-medium footer-link">Home</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="body-medium footer-link">Buy</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="body-medium footer-link">Sell</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="body-medium footer-link">Rent</a>
-                    </li>
-
+                    <li><a href="#" class="body-medium footer-link">Home</a></li>
+                    <li><a href="#" class="body-medium footer-link">Buy</a></li>
+                    <li><a href="#" class="body-medium footer-link">Sell</a></li>
+                    <li><a href="#" class="body-medium footer-link">Rent</a></li>
                 </ul>
             </nav>
 
             <nav class="footer-new" aria-labelledby="nav-label-2">
                 <p class="title-small footer-list-title" id="nav-label-2">Support</p>
-
                 <ul class="footer-list">
-
-                    <li>
-                        <a href="#" class="body-medium footer-link">About Us</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="body-medium footer-link">Contact Us</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="body-medium footer-link">Privacy Policy</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="body-medium footer-link">Terms & Conditions</a>
-                    </li>
-
+                    <li><a href="#" class="body-medium footer-link">About Us</a></li>
+                    <li><a href="#" class="body-medium footer-link">Contact Us</a></li>
+                    <li><a href="#" class="body-medium footer-link">Privacy Policy</a></li>
+                    <li><a href="#" class="body-medium footer-link">Terms & Conditions</a></li>
                 </ul>
             </nav>
 
             <nav class="footer-new" aria-labelledby="nav-label-3">
                 <p class="title-small footer-list-title" id="nav-label-3">Get in touch</p>
-
                 <ul class="footer-list">
-
-                    <li>
-                       <a href="#" class="body-medium footer-link">helloyou@busquedadecasa.com</a>
-                    </li>
-
-                    <li>
-                        <address class="address body-medium">
-                            4114 Ivey Park Cir, Atlanta GA 30071
-                        </address>
-                    </li>
-
+                    <li><a href="#" class="body-medium footer-link">helloyou@busquedadecasa.com</a></li>
+                    <li><address class="address body-medium">4114 Ivey Park Cir, Atlanta GA 30071</address></li>
                     <li>
                         <ul class="social-list">
-
-                        <li>
-                            <a href="#" class="social-link">
-                                <img src="../assets/img/facebook.svg" alt="facebook">
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="#" class="social-link">
-                                <img src="../assets/img/twitter.svg" alt="twitter">
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="#" class="social-link">
-                                <img src="../assets/img/insta.svg" alt="instagram">
-                            </a>
-                        </li>
-
+                            <li><a href="#" class="social-link"><img src="assets/img/facebook.svg" alt="facebook"></a></li>
+                            <li><a href="#" class="social-link"><img src="assets/img/twitter.svg" alt="twitter"></a></li>
+                            <li><a href="#" class="social-link"><img src="assets/img/insta.svg" alt="instagram"></a></li>
                         </ul>
                     </li>
-
-
                 </ul>
             </nav>
-
         </div>
     </div>
 
     <div class="footer-bottom">
         <div class="container">
-
-            <p class="copyright body-medium">
-                Copyright 2024 ReatEstate 
-            </p>
+            <p class="copyright body-medium">Copyright 2024 ReatEstate</p>
         </div>
     </div>
-
 </footer>
+
+
+
 </body>
 </html>
