--- a/public/rent.html
+++ b/public/rent.html
@@ -16,12 +16,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0" />
 
     <!-- Custom CSS Link -->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- Custom JS Link -->
-    <script src="../assets/js/script.js" defer></script>
-    <script src="../assets/js/properties.js" defer></script> 
-    <script src="../assets/js/search-results.js" defer></script> 
+    <script src="assets/js/script.js" defer></script>
+    <script src="assets/js/properties.js" defer></script> 
+    <script src="assets/js/search-results.js" defer></script> 
+    <script src="assets/js/account.js" defer></script>
+    <script src="assets/js/sell.js" defer></script>
 
 </head>
 <body>
@@ -108,6 +110,7 @@
                 </div>
 
             </div>
+            
 
             <div class="card">
                 <div class="card-banner">
